# libdynd

./: .binstar.yml  .clang-format  .gitignore  .gitmodules  .mailmap  .travis.yml  BUILD.md  CMakeLists.txt  DEMOSCRIPT  DESIGN.txt  INSTALL.txt  LICENSE.md  LICENSE.txt  README.md  README.txt  TESTING.md  TESTING.txt  acling  appveyor.yml  azure-pipelines.yml  build.sh  conda.yaml  gdaemon  libdynd-config.bat.in  libdynd-config.in  out.txt  set-llvm-cmake  test.txt  trigger_python.sh
basic_kernels/: CMakeLists.txt  elwise_kernels.cpp
benchmarks/: CMakeLists.txt  benchmark_dispatch_map.cpp  benchmark_libdynd.cpp  dispatcher.cpp  dispatcher.hpp
benchmarks/array/: benchmark_empty.cpp
benchmarks/func/: benchmark_apply.cpp  benchmark_arithmetic.cpp  benchmark_random.cpp
examples/: CMakeLists.txt  abi_sparse.cpp  simple_example.cpp  simple_example.cu
examples/docs/: DESIGN.txt  ckernels.md  numpy-like-api.md
plugin/: CMakeLists.txt  dynd.cpp  plugin.cpp
plugins/mkl/: CMakeLists.txt
python/: CMakeLists.txt  FindCython.cmake  FindNumPy.cmake  FindPythonLibsNew.cmake  UseCython.cmake  setup.py
python/include/: codegen_cache.pxd  codegen_cache_functions.hpp  ctypes_interop.hpp  dnd.pxd  do_import_array.hpp  dtype.pxd  dtype_functions.hpp  elementwise_gfunc.hpp  elementwise_gfunc.pxd  elwise_gfunc.hpp  elwise_gfunc.pxd  elwise_gfunc_functions.hpp  elwise_reduce_gfunc.hpp  elwise_reduce_gfunc.pxd  elwise_reduce_gfunc_functions.hpp  ndarray.pxd  ndarray_as_py.hpp  ndarray_from_py.hpp  ndarray_functions.hpp  numpy_interop.hpp  placement_wrappers.hpp  unary_gfunc.hpp  unary_gfunc.pxd  utility_functions.hpp
python/pydnd/: __init__.py  basic_dtypes.py  dnd_ctypes.py  elementwise_gfuncs.py  elementwise_kernels.py  elwise_gfuncs.py  elwise_kernels.py  elwise_reduce_gfuncs.py  gfunc.py  kernels_init.py
python/src/: _pydnd.pyx  codegen_cache_functions.cpp  ctypes_interop.cpp  dnd.pxd  dtype_functions.cpp  dtype_functions.hpp  elementwise_gfunc.cpp  elwise_gfunc.cpp  elwise_gfunc_functions.cpp  elwise_reduce_gfunc.cpp  elwise_reduce_gfunc_functions.cpp  ndarray_as_py.cpp  ndarray_from_py.cpp  ndarray_functions.cpp  ndarray_functions.hpp  numpy_interop.cpp  placement_wrappers.hpp  unary_gfunc.cpp  utility_functions.cpp
tests/: CMakeLists.txt  builderror_badassignment.cpp  builderror_includendarray.cpp  dtype_assign_test.cpp  dtype_casting_test.cpp  dtype_test.cpp  dynd_assertions.hpp  gen_special_vals.py  inc_gtest.hpp  ndarray_assign_test.cpp  ndarray_test.cpp  special_vals.hpp  test_access.cpp  test_align_dtype.cpp  test_arithmetic_op.cpp  test_array_dtype.cpp  test_bool1.cpp  test_buffer.cpp  test_byteswap_dtype.cpp  test_categorical_dtype.cpp  test_config.cpp  test_conversion_dtype.cpp  test_dispatch_map.cpp  test_dtype.cpp  test_dtype_assign.cpp  test_dtype_casting.cpp  test_dtype_promotion.cpp  test_fft.cpp  test_fixedstring_dtype.cpp  test_flat_iterator.cpp  test_float16.cpp  test_integer_sequence.cpp  test_io.cpp  test_iterator.cpp  test_limits.cpp  test_math.cpp  test_memory.cpp  test_memory.hpp  test_memory_new.hpp  test_mkl.cpp  (+14 more)
tests/array/: test_array.cpp  test_array_assign.cpp  test_array_at.cpp  test_array_cast.cpp  test_array_compare.cpp  test_array_iter.cpp  test_array_range.cpp  test_array_views.cpp  test_arrmeta_holder.cpp  test_asarray.cpp  test_elwise.cpp  test_foreach.cpp  test_json_formatter.cpp  test_json_parser.cpp  test_memmap.cpp  test_outer.cpp  test_view.cpp  test_with.cpp
tests/codegen/: test_binary_kernel_adapter.cpp  test_codegen_cache.cpp  test_unary_kernel_adapter.cpp
tests/dtypes/: test_align_dtype.cpp  test_align_type.cpp  test_array_dtype.cpp  test_bytes_dtype.cpp  test_bytes_type.cpp  test_byteswap_dtype.cpp  test_byteswap_type.cpp  test_categorical_dtype.cpp  test_categorical_type.cpp  test_complex_dtype.cpp  test_complex_type.cpp  test_convert_dtype.cpp  test_convert_type.cpp  test_cstruct_dtype.cpp  test_cstruct_type.cpp  test_datashape_formatter.cpp  test_datashape_parser.cpp  test_date_dtype.cpp  test_date_type.cpp  test_datetime_dtype.cpp  test_datetime_type.cpp  test_dtype.cpp  test_dtype_assign.cpp  test_dtype_casting.cpp  test_dtype_dtype.cpp  test_dtype_promotion.cpp  test_fixed_dim_dtype.cpp  test_fixed_dim_type.cpp  test_fixedarray_dtype.cpp  test_fixedbytes_dtype.cpp  test_fixedbytes_type.cpp  test_fixedstring_dtype.cpp  test_fixedstring_type.cpp  test_fixedstruct_dtype.cpp  test_groupby_dtype.cpp  test_groupby_type.cpp  test_json_dtype.cpp  test_json_type.cpp  test_pointer_dtype.cpp  test_pointer_type.cpp  (+16 more)
tests/func/: gen_special_vals.py  special_vals.hpp  test_apply.cpp  test_apply.cu  test_arithmetic.cpp  test_arrfunc.cpp  test_aux.cpp  test_callable.cpp  test_chain.cpp  test_chain_arrfunc.cpp  test_comparison.cpp  test_compose.cpp  test_compound.cpp  test_constant.cpp  test_elwise.cpp  test_elwise.cu  test_elwise_callrefres.cpp  test_elwise_callretres.cpp  test_elwise_funcrefres.cpp  test_elwise_funcretres.cpp  test_elwise_methrefres.cpp  test_elwise_methretres.cpp  test_fft.cpp  test_functor_arrfunc.cpp  test_index.cpp  test_lift_arrfunc.cpp  test_lift_arrfunc.cu  test_logic.cpp  test_math.cpp  test_max.cpp  test_mean.cpp  test_multidispatch.cpp  test_multidispatch_arrfunc.cpp  test_neighborhood.cpp  test_option.cpp  test_outer.cpp  test_permute.cpp  test_random.cpp  test_reduction.cpp  test_registry.cpp  (+10 more)
tests/gfunc/: test_callable.cpp  test_ckernel_deferred.cpp  test_reduction.cpp  test_rolling.cpp
tests/ndarray/: test_ndarray.cpp  test_ndarray_arange.cpp  test_ndarray_assign.cpp  test_ndarray_index.cpp  test_ndarray_views.cpp
tests/ndobject/: test_json_formatter.cpp  test_json_parser.cpp  test_ndobject.cpp  test_ndobject_arange.cpp  test_ndobject_assign.cpp  test_ndobject_at.cpp  test_ndobject_cast.cpp  test_ndobject_compare.cpp  test_ndobject_range.cpp  test_ndobject_views.cpp
tests/pp/: test_pp.cpp  test_pp_arithmetic.cpp  test_pp_comparision.cpp  test_pp_comparison.cpp  test_pp_if.cpp  test_pp_list.cpp  test_pp_logical.cpp  test_pp_token.cpp
tests/types/: test_adapt_type.cpp  test_align_type.cpp  (+59 more)
(+1428 files in other folders)
